corrected img & link problems

--- a/Odins-recipe/Odinss-recipe/friedChicken.html
+++ b/Odins-recipe/Odinss-recipe/friedChicken.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Chef John's Buttermilk Fried Chicken</h1>
-        <img src="https://www.allrecipes.com/recipe/220128/chef-johns-buttermilk-fried-chicken/">
+        <img src="https://www.allrecipes.com/thmb/ZnNoScrM0Vwb6S0K0hc00BZjqhs=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/220128-chef-johns-buttermilk-fried-chicken-032-4x3-4880a8665b4b4f008d108728111923ea.jpg">
         <h2>Description</h2>
         <p>Buttermilk fried chicken that's incredibly tender, thanks to tangy buttermilk. After the buttermilk soak, dredge the chicken pieces in seasoned flour and fry them in hot oil until crisp and golden  </p>
         <p>This buttermilk fried chicken recipe results in chicken that’s wonderfully crispy on the outside, but tender and juicy on the inside.</p>
