--- a/Odins-recipe/index.html
+++ b/Odins-recipe/index.html
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="Odinss-recipes/friedChicken">Fried Chicken</a>
+        <a href="Odinss-recipes/friedChicken.html">Fried Chicken</a>
     </body>
 </html>
